# cppgen

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.MD  LICENSE  README.MD
.github/workflows/: build.yml  clang-style.yml  release.yml
include/: CLI11.hpp  CppGen.h  version.h  version.h.in
src/: CppGen.cpp  main.cpp
tests/: CMakeLists.txt  test.cpp
